tools/architecture/validate-source-imports/tests/fixtures/invalid/product-imports-architecture/src/index.ts
import { lint } from "@architecture/validate-package-metadata";
export const value = lint;
